Content updated up to Developer and business goals - inclusive

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,3 +3,4 @@ vscode:
     - syler.sass-indented@1.7.1:f3f2KUud3XNbQqpbynlmTg==
     - ritwickdey.live-sass@3.0.0:x2c+sCJm+QmH2qn2h1X9Zw==
     - ritwickdey.LiveServer@5.6.1:wV4LBkq6Z5s1xwf2HrB+cw==
+    - jebbs.markdown-extended@1.0.15:0S7DorNtBTc7XNp9yQWqbA==
